Closed
Bug 199014
Opened 22 years ago
Closed 22 years ago
A crash occurs when closing the bookmark manager window
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: mikepinkerton)
References
Details
Attachments
(1 file)
6.20 KB,
text/plain
|
Details |
Build: 2003-03-24-08
Platform: OS X 10.2.4
Expected Results: Window should close and application should not crash
What I got: Application crashs
Steps to reproduce:
1) Select Manage Bookmarks from the Bookmarks menu
2) Close this window
3) Crash occurs
Reporter | ||
Updated•22 years ago
|
Summary: A crash occurs when closing the bookmark manager window → A crash occurs when closing the bookmark manager window
Reporter | ||
Comment 1•22 years ago
|
||
Assignee | ||
Comment 3•22 years ago
|
||
fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Component: Downloading → Bookmarks
Reporter | ||
Comment 5•22 years ago
|
||
*** Bug 199194 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•