some cleanup and fix a crash when closing window with manager showing (bug 199014)